--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
     <exec-maven-plugin.version>1.5.0</exec-maven-plugin.version>
 
-    <vertx.version>4.0.0-SNAPSHOT</vertx.version>
+    <vertx.version>4.0.0-milestone4</vertx.version>
     <junit-jupiter.version>5.4.0</junit-jupiter.version>
 
     <main.verticle>com.elevensheep.gateway.MainVerticle</main.verticle>
@@ -54,6 +54,10 @@
       <groupId>io.vertx</groupId>
       <artifactId>vertx-junit5</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-circuit-breaker</artifactId>
     </dependency>
 
 <!-- log4j2 日志配置-->
